--- a/server/index.html
+++ b/server/index.html
@@ -6,7 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfoli</title>
 </head>
+<style>
+
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
 <body>
-  <p>This is my portfolio</p>
+
+  <header>
+    <h1>
+      This is my portfolio
+
+    </h1>
+    
+
+  </header>
+  
 </body>
 </html>
