--- a/server/index.html
+++ b/server/index.html
@@ -8,7 +8,8 @@
 </head>
 <style>
 
-  header {
+  header, main {
+    flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,8 +23,14 @@
 
     </h1>
     
-
   </header>
-  
+  <main>
+
+    <h3>Name : Ademola Ogunmokun</h3>
+    <h3>Sex : Male</h3>
+    <h3>Occupation : Software Developer</h3>
+    <h3>Stack : NodeJS, React, Ruby on Rails</h3>
+  </main>
+    
 </body>
 </html>
