--- a/server/about.html
+++ b/server/about.html
@@ -29,11 +29,26 @@ header {
 </head>
 <body>
   <header>
+    <nav>
+
+      <ul>
+        <li>
+          <a href="#"> Home</a>
+        </li>
+        <li>
+          <a href="/about"> About</a>
+        </li>
+        <li>
+          <a href="/contact"> Contact</a>
+        </li>
+      </ul>
+    </nav>
+ 
     <h1>
 
       About me
     </h1>
-
+     
   </header>
   <main>
 
