--- a/server/about.html
+++ b/server/about.html
@@ -33,7 +33,7 @@ header {
 
       <ul>
         <li>
-          <a href="#"> Home</a>
+          <a href="/"> Home</a>
         </li>
         <li>
           <a href="/about"> About</a>
