--- a/server/contact.html
+++ b/server/contact.html
@@ -20,7 +20,7 @@
 
       <ul>
         <li>
-          <a href="#"> Home</a>
+          <a href="/"> Home</a>
         </li>
         <li>
           <a href="/about"> About</a>
