--- a/server/index.html
+++ b/server/index.html
@@ -22,7 +22,7 @@
 
       <ul>
         <li>
-          <a href="#"> Home</a>
+          <a href="/"> Home</a>
         </li>
         <li>
           <a href="/about"> About</a>
